--- a/WpfApp2/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/WpfApp2/MainWindow.xaml
@@ -7,10 +7,14 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525" Loaded="Window_Loaded">
     <Grid>
-        <Label x:Name="label" Content="{Binding namelist[0].name}" HorizontalAlignment="Left" Height="23" Margin="201,121,0,0" VerticalAlignment="Top" Width="54"/>
-        <Label x:Name="label1" Content="{Binding namelist[1].name}" HorizontalAlignment="Left" Height="23" Margin="201,161,0,0" VerticalAlignment="Top" Width="54"/>
-        <Label x:Name="label2" Content="{Binding namelist[2].name}" HorizontalAlignment="Left" Height="23" Margin="201,191,0,0" VerticalAlignment="Top" Width="54"/>
-        <Button x:Name="button" Content="change" HorizontalAlignment="Left" Height="29" Margin="224,239,0,0" VerticalAlignment="Top" Width="108" Click="button_Click"/>
+        <Label x:Name="label" Content="{Binding [0].name}" HorizontalAlignment="Left" Height="23" Margin="201,121,0,0" VerticalAlignment="Top" Width="54"/>
+        <Label x:Name="label1" Content="{Binding [1].name}" HorizontalAlignment="Left" Height="23" Margin="201,161,0,0" VerticalAlignment="Top" Width="54"/>
+        <Label x:Name="label2" Content="{Binding [2].name}" HorizontalAlignment="Left" Height="23" Margin="201,191,0,0" VerticalAlignment="Top" Width="54"/>
+        <Button x:Name="button" Content="change" HorizontalAlignment="Left" Height="29" Margin="109,240,0,0" VerticalAlignment="Top" Width="108" Click="button_Click"/>
+        <Label x:Name="label4" Content="{Binding [0].name}" HorizontalAlignment="Left" Height="23" Margin="300,121,0,0" VerticalAlignment="Top" Width="54"/>
+        <Label x:Name="label5" Content="{Binding [1].name}" HorizontalAlignment="Left" Height="23" Margin="300,161,0,0" VerticalAlignment="Top" Width="54"/>
+        <Label x:Name="label6" Content="{Binding [2].name}" HorizontalAlignment="Left" Height="23" Margin="300,191,0,0" VerticalAlignment="Top" Width="54"/>
+        <Button x:Name="button1" Content="change" HorizontalAlignment="Left" Margin="358,245,0,0" VerticalAlignment="Top" Width="75" Click="button1_Click"/>
 
     </Grid>
 </Window>
