--- a/DragAndDropSample/DragAndDropSample/MainWindow.xaml
+++ b/DragAndDropSample/DragAndDropSample/MainWindow.xaml
@@ -5,10 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DragAndDropSample"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="768" Width="1366">
     <Grid>
-        <Label x:Name="label" Content="晓监事2333" HorizontalAlignment="Left" Margin="41,38,0,0" VerticalAlignment="Top" Width="78" RenderTransformOrigin="0.532,0.508" MouseMove="label_MouseMove"/>
-        <ListBox x:Name="listbox" HorizontalAlignment="Left" Height="283" Margin="298,10,0,0" VerticalAlignment="Top" Width="100" AllowDrop="True" DragEnter="listbox_DragEnter" DragLeave="listbox_DragLeave" DragOver="listbox_DragOver" Drop="listbox_Drop"/>
+        <Label x:Name="label" Content="晓监事2333" HorizontalAlignment="Left" Margin="41,38,0,0" 
+               VerticalAlignment="Top" Width="78" RenderTransformOrigin="0.532,0.508" MouseMove="label_MouseMove"/>
+        
+        <ListBox x:Name="listbox" HorizontalAlignment="Left" Height="177" Margin="298,10,0,0" 
+                 VerticalAlignment="Top" Width="100" AllowDrop="True" DragEnter="listbox_DragEnter"
+                 DragLeave="listbox_DragLeave" DragOver="listbox_DragOver" Drop="listbox_Drop"/>
+        
+        <Rectangle x:Name="rec" Fill="Blue" HorizontalAlignment="Left" Height="24" 
+                   Margin="184,475,0,0" Stroke="Black" VerticalAlignment="Top" Width="116" MouseMove="rec_MouseMove"/>
+        
+        <StackPanel x:Name="stack" HorizontalAlignment="Left" Height="254" Margin="360,379,0,0"  
+                    VerticalAlignment="Top" Width="186" Background="Gainsboro" AllowDrop="True"
+                    DragEnter="stack_DragEnter" DragLeave="stack_DragLeave" DragOver="stack_DragOver" Drop="stack_Drop"/>
 
     </Grid>
 </Window>
