--- a/ScheduleTable/ScheduleTable/MainWindow.xaml
+++ b/ScheduleTable/ScheduleTable/MainWindow.xaml
@@ -14,29 +14,25 @@
             <Setter Property="HorizontalAlignment" Value="Left"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
         </Style>
-        <Style x:Key="canvas1" TargetType="Canvas">
-            <Setter Property="Height" Value="60"/>
-            <Setter Property="Width" Value="1008"/>
-            <Setter Property="Background" Value="LightGray"/>
-        </Style>
         <Style x:Key="slotstyle" TargetType="ListBox">
             <Setter Property="Height" Value="60"/>
+            <!--每0.7分钟代表1像素-->
             <Setter Property="Width" Value="1008"/>
-            <Setter Property="Background" Value="LightGray"/>
+            <Setter Property="Background" Value="Blue"/>
 
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ListBox}">
-                        <Canvas Background="{TemplateBinding Background}" x:Name="CanvasPanel" IsItemsHost="True" />
+                        <Canvas Background="LightGray" Width="1008" x:Name="CanvasPanel" HorizontalAlignment="Center" IsItemsHost="True" />
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
             <Setter Property="ItemContainerStyle">
                 <Setter.Value>
                     <Style TargetType="ListBoxItem">
-                        <Setter Property="Canvas.Left" Value="{Binding XPath=drawPosition}"/>
+                        <Setter Property="Canvas.Left" Value="{Binding drawPosition}"/>
                         <Setter Property="Canvas.Top" Value="5"/>
-                        <Setter Property="Width" Value="{Binding XPath=darwWidth}"/>
+                        <Setter Property="Width" Value="{Binding darwWidth}"/>
                         <Setter Property="Template" >
                             <Setter.Value>
                                 <ControlTemplate>
@@ -45,11 +41,11 @@
                                             <RowDefinition/>
                                             <RowDefinition/>
                                         </Grid.RowDefinitions>
-                                        <Label Margin="0,10,0,0" Grid.Row="0" Grid.RowSpan="2" HorizontalAlignment="Center"  Content="{Binding XPath=FlightNumber}"/>
-                                        <Label Margin="2,0,0,0" Grid.Row="0" HorizontalAlignment="Left" Content="{Binding XPath=Depart}"/>
-                                        <Label Margin="0,0,2,0" Grid.Row="0" HorizontalAlignment="Right" Content="{Binding XPath=Arrival}"/>
-                                        <TextBlock Margin="2,0,0,0" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding XPath=starttime, StringFormat={}{0:t}, ConverterCulture=es-ES}"/>
-                                        <TextBlock Margin="0,0,2,0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Text="{Binding XPath=endtime ,StringFormat={}{0:t}, ConverterCulture=es-ES}" />
+                                        <Label Margin="0,10,0,0" Grid.Row="0" Grid.RowSpan="2" HorizontalAlignment="Center"  Content="{Binding FlightNumber}"/>
+                                        <Label Margin="2,0,0,0" Grid.Row="0" HorizontalAlignment="Left" Content="{Binding Depart}"/>
+                                        <Label Margin="0,0,2,0" Grid.Row="0" HorizontalAlignment="Right" Content="{Binding Arrival}"/>
+                                        <TextBlock Margin="2,0,0,0" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding starttime, StringFormat={}{0:t}, ConverterCulture=es-ES}"/>
+                                        <TextBlock Margin="0,0,2,0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Text="{Binding endtime ,StringFormat={}{0:t}, ConverterCulture=es-ES}" />
                                     </Grid>
                                 </ControlTemplate>
                             </Setter.Value>
@@ -59,7 +55,7 @@
             </Setter>
         </Style>
     </Window.Resources>
-    
+
     <Grid>
         <Grid x:Name="ScheduleTablePanel" Height="720" Width="1100" Background="AliceBlue" >
             <Grid.ColumnDefinitions>
@@ -76,14 +72,6 @@
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <Label Content="Mon" Style="{DynamicResource label1}" Grid.Column="0" Grid.Row="1"/>
-            <Label Content="Tue" Style="{DynamicResource label1}" Grid.Column="0" Grid.Row="2"/>
-            <Label Content="Wed" Style="{DynamicResource label1}" Grid.Column="0" Grid.Row="3"/>
-            <Label Content="Thu" Style="{DynamicResource label1}" Grid.Column="0" Grid.Row="4"/>
-            <Label Content="Fri" Style="{DynamicResource label1}" Grid.Column="0" Grid.Row="5"/>
-            <Label Content="Sat" Style="{DynamicResource label1}" Grid.Column="0" Grid.Row="6"/>
-            <Label Content="Sun" Style="{DynamicResource label1}" Grid.Column="0" Grid.Row="7"/>
-
             <ListBox x:Name="MondaySlot"  Style="{DynamicResource slotstyle}" Grid.Column="1" Grid.Row="1"/>
             <ListBox x:Name="TuesdaySlot" Style="{DynamicResource slotstyle}" Grid.Column="1" Grid.Row="2"/>
             <ListBox x:Name="WednesdaySlot" Style="{DynamicResource slotstyle}" Grid.Column="1" Grid.Row="3"/>
@@ -91,8 +79,16 @@
             <ListBox x:Name="FridaySlot" Style="{DynamicResource slotstyle}" Grid.Column="1" Grid.Row="5"/>
             <ListBox x:Name="SaturdaySlot" Style="{DynamicResource slotstyle}" Grid.Column="1" Grid.Row="6"/>
             <ListBox x:Name="SundaySlot" Style="{DynamicResource slotstyle}" Grid.Column="1" Grid.Row="7"/>
-
+            
+            <Label Content="Mon" Style="{DynamicResource label1}" Grid.Column="0" Grid.Row="1"/>
+            <Label Content="Tue" Style="{DynamicResource label1}" Grid.Column="0" Grid.Row="2"/>
+            <Label Content="Wed" Style="{DynamicResource label1}" Grid.Column="0" Grid.Row="3"/>
+            <Label Content="Thu" Style="{DynamicResource label1}" Grid.Column="0" Grid.Row="4"/>
+            <Label Content="Fri" Style="{DynamicResource label1}" Grid.Column="0" Grid.Row="5"/>
+            <Label Content="Sat" Style="{DynamicResource label1}" Grid.Column="0" Grid.Row="6"/>            
+            <Label Content="Sun" Style="{DynamicResource label1}" Grid.Column="0" Grid.Row="7"/>
         </Grid>
+
         <Expander Header="FlightsTemplate" HorizontalAlignment="Left" Height="500" VerticalAlignment="Top" Width="200">
             <Grid Background="#FFE5E5E5">
                 <ListBox HorizontalAlignment="Left" Height="457" VerticalAlignment="Top" Width="188" Margin="0,10,0,0"/>
