--- a/ProcessBasedOnTimelineTest/ProcessBasedOnTimelineTest/MainWindow.xaml
+++ b/ProcessBasedOnTimelineTest/ProcessBasedOnTimelineTest/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ThreadTimerWPF.MainWindow"
+﻿<Window x:Class="ProcessBasedOnTimelineTest.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ThreadTimerWPF"
+        xmlns:local="clr-namespace:ProcessBasedOnTimelineTest"
         mc:Ignorable="d"
         Title="MainWindow" Height="700" Width="525" Loaded="Window_Loaded">
     <Grid>
