--- a/customControlsPractice/customControlsPractice/MainWindow.xaml
+++ b/customControlsPractice/customControlsPractice/MainWindow.xaml
@@ -1,12 +1,18 @@
-﻿<Window x:Class="customControlsPractice.MainWindow"
+﻿<Controls:MetroWindow
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+
+    xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+
         xmlns:local="clr-namespace:customControlsPractice"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:Custom="http://metro.mahapps.com/winfx/xaml/controls" 
+        x:Class="customControlsPractice.MainWindow"
+
+        Title="MainWindow" Height="600" Width="800">
+
     <Grid>
-        
+        <Custom:ToggleSwitchButton Content="ToggleSwitchButton"  HorizontalAlignment="Left" Height="36" Margin="341,277.5,0,0" VerticalAlignment="Top" Width="115.5" Checked="ToggleSwitchButton_Checked"/>
+        <local:mybutton HorizontalAlignment="Left" Height="73.5" Margin="212,402,0,0" VerticalAlignment="Top" Width="318"/>
+        <Custom:MetroProgressBar x:Name="progressbar" Background="LightGray" Value="{Binding progress}" HorizontalAlignment="Left" Height="48" Margin="180.5,175.5,0,0" VerticalAlignment="Top" Width="369"/>
     </Grid>
-</Window>
+</Controls:MetroWindow>
