--- a/customControlsPractice/customControlsPractice/MainWindow.xaml
+++ b/customControlsPractice/customControlsPractice/MainWindow.xaml
@@ -1,18 +1,38 @@
-﻿<Controls:MetroWindow
+﻿<Custom:MetroWindow
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-
     xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-
         xmlns:local="clr-namespace:customControlsPractice"
         xmlns:Custom="http://metro.mahapps.com/winfx/xaml/controls" 
+        xmlns:ed="http://schemas.microsoft.com/expression/2010/drawing" 
         x:Class="customControlsPractice.MainWindow"
 
-        Title="MainWindow" Height="600" Width="800">
+        Title="MainWindow" Height="600" Width="800" Loaded="MetroWindow_Loaded">
 
     <Grid>
         <Custom:ToggleSwitchButton Content="ToggleSwitchButton"  HorizontalAlignment="Left" Height="36" Margin="341,277.5,0,0" VerticalAlignment="Top" Width="115.5" Checked="ToggleSwitchButton_Checked"/>
         <local:mybutton HorizontalAlignment="Left" Height="73.5" Margin="212,402,0,0" VerticalAlignment="Top" Width="318"/>
-        <Custom:MetroProgressBar x:Name="progressbar" Background="LightGray" Value="{Binding progress}" HorizontalAlignment="Left" Height="48" Margin="180.5,175.5,0,0" VerticalAlignment="Top" Width="369"/>
+        <Custom:MetroProgressBar x:Name="progressbar" Background="LightGray"  HorizontalAlignment="Left" Height="48" Margin="180.5,175.5,0,0" VerticalAlignment="Top" Width="369"/>
+        <Button Content="button" FontFamily="Verdana" HorizontalAlignment="Left" Height="34.867" Margin="147.09,68.884,0,0" VerticalAlignment="Top" Width="235.351" Click="Button_Click"/>
+        <CheckBox Content="CheckBox" HorizontalAlignment="Left" Height="34.867" Margin="494.305,68.884,0,0" VerticalAlignment="Top" Width="129.298"/>
+        <Expander Header="Expander" HorizontalAlignment="Left" Height="120" Margin="609,49.817,0,0" VerticalAlignment="Top" Width="135">
+            <Grid Background="#FFE5E5E5"/>
+        </Expander>
+        <ListBox HorizontalAlignment="Left" Height="130" Margin="29,20,0,0" VerticalAlignment="Top" Width="100"/>
+        <ListView HorizontalAlignment="Left" Height="87" Margin="648,260,0,0" VerticalAlignment="Top" Width="105">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn/>
+                </GridView>
+            </ListView.View>
+        </ListView>
+        <TabControl HorizontalAlignment="Left" Height="120" Margin="34,241,0,0" VerticalAlignment="Top" Width="257">
+            <TabItem Header="TabItem">
+                <Grid Background="#FFE5E5E5"/>
+            </TabItem>
+            <TabItem Header="TabItem">
+                <Grid Background="#FFE5E5E5"/>
+            </TabItem>
+        </TabControl>
     </Grid>
-</Controls:MetroWindow>
+</Custom:MetroWindow>
